--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Europe/Moscow
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://10.136.5.91
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
