--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/djekoff/djekoffBlog.git
+  repo: https://github.com/djekoff/djekoffBlogStatic.git
   branch: master
